# foji-ai-api

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-prod.yml
app/: main.py
app/api/routes/: chat.py  internal.py  widget.py
app/core/: config.py  database.py  exceptions.py  security.py  ssm.py
app/models/: __init__.py  agent.py  agent_file.py  ai_model.py  company.py  daily_stat.py  plan.py  platform_setting.py  subscription.py
app/providers/: base.py  bedrock_provider.py  gemini_provider.py  openai_provider.py  router.py
app/services/: agent_service.py  chat_history.py  credentials_service.py  file_context.py  model_selector.py  prompt_builder.py  rate_limit_service.py  s3_content_service.py
